和郭宇进行了合并，目前有一个bug是分类中点分类上的添加的时候获得的分类永远是地一个的分类名字。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,10 @@
         <activity android:name=".AddActivity"></activity>
         <activity android:name=".SettingActivity"></activity>
     </application>
-
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:resizeable="true"
+        android:anyDensity="true"/>
 </manifest>
