--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,21 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-
-        </activity>
-        <activity android:name=".AddActivity"></activity>
-        <activity android:name=".SettingActivity"></activity>
-        <activity android:name=".SmartActivity"></activity>
-        <activity android:name=".WeekPreviewActivity">
             <!--移动这几行可以设置默认启动的activity-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".AddActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".SmartActivity">
+
+
+        </activity>
+        <activity android:name=".WeekPreviewActivity">
+
         </activity>
     </application>
     <supports-screens
