--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eagzzycsl.smartable">
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,27 +17,27 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <!--移动这几行可以设置默认启动的activity-->
+
+        </activity>
+        <activity android:name=".AddActivity" />
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".SmartActivity"></activity>
+        <activity android:name=".WeekPreviewActivity"></activity>
+        <activity
+            android:name=".SingleAddActivity"
+            android:label="@string/title_activity_single_add">
+
+            <!-- 移动这几行可以设置默认启动的activity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".AddActivity"></activity>
-        <activity android:name=".SettingActivity"></activity>
-        <activity android:name=".SmartActivity">
-
 
         </activity>
-        <activity android:name=".WeekPreviewActivity">
-
-        </activity>
+        <activity
+            android:name=".SmartAddActivity"
+            android:label="@string/title_activity_smart_add"></activity>
     </application>
-    <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:resizeable="true"
-        android:smallScreens="true" />
+
 </manifest>
