--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <!-- 移动这几行可以设置默认启动的activity -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".AddActivity" />
         <activity android:name=".SettingActivity" />
@@ -37,7 +32,15 @@
         </activity>
         <activity
             android:name=".SmartAddActivity"
-            android:label="@string/title_activity_smart_add"></activity>
+            android:label="@string/title_activity_smart_add">
+
+            <!-- 移动这几行可以设置默认启动的activity -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
